auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 972011045520.dkr.ecr.us-east-1.amazonaws.com/streaming-auth:v0.1.0
        ports:
        - containerPort: 3001
        readinessProbe:
          tcpSocket:
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: streaming
spec:
  selector:
    app: auth
  ports:
  - port: 3001
    targetPort: 3001
