backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
      - name: streaming
        image: 972011045520.dkr.ecr.us-east-1.amazonaws.com/streaming-streaming:v0.1.0
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3002
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: streaming
spec:
  selector:
    app: streaming
  ports:
  - port: 3002
    targetPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: 972011045520.dkr.ecr.us-east-1.amazonaws.com/streaming-admin:v0.1.0
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3003
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: streaming
spec:
  selector:
    app: admin
  ports:
  - port: 3003
    targetPort: 3003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: 972011045520.dkr.ecr.us-east-1.amazonaws.com/streaming-chat:v0.1.0
        ports:
        - containerPort: 3004
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3004
          initialDelaySeconds: 10
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: chat
  namespace: streaming
spec:
  selector:
    app: chat
  ports:
  - port: 3004
    targetPort: 3004
