ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress
  namespace: streaming
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Configures AWS ALB to listen on ports 80, 3001, 3002, 3003, 3004
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTP": 3001}, {"HTTP": 3002}, {"HTTP": 3003}, {"HTTP": 3004}]'
    alb.ingress.kubernetes.io/success-codes: '200-399'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/register
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/verify
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/forgetPassword
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/streaming
        pathType: Prefix
        backend:
          service:
            name: streaming
            port:
              number: 3002
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 3003
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 3004
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 3004
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
