ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streaming-ingress-auth
  namespace: streaming
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: streamingapp
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/success-codes: '200-399'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/register
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/login
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/verify
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/forgetPassword
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/val
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
